<resources>
    <string name="app_name">NightsWatch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txt_new_account">No account yet? Create one</string>
    <string name="txt_login_button">Login</string>
    <string name="txt_login__remember_me_button">Remember Me</string>
    <string name="txt_hint_username">Username</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_password_again">Confirm Password</string>
    <string name="txt_forgot_password">Forgot password?</string>

    <string name="txt_signup_button">Sign up</string>

    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="history_title">My History</string>
    <string name="watch_title">My Watch List</string>
    <string name="statistics_title">Statistics</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_watch_list">WatchListActivity</string>


    <!--Profile screen strings-->
    <string name="profile_txt_change_password">Change Password</string>
    <string name="profile_txt_logout">Logout</string>
    <string name="profile_txt_edit_rpofile">Edit Profile</string>


    <!--Change password screen strings -->
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_password_fail_text">Enter a valid password</string>
    <string name="change_password_not_match_fail_text">Password does not match the confirm password</string>

    <!--Edit Profile screen string-->
    <string name="edit_profile_txt_profile_img">Profile Photo</string>
    <string name="edit_profile_txt_fullname">Full Name</string>
    <string name="edit_profile_txt_username">Username</string>
    <string name="edit_profile_txt_email">Email</string>
    <string name="edit_profile_bio">Short Bio</string>
    <string name="edit_profile_btn_title">Submit</string>


    <!--Reset Password screen string-->
    <string name="reset_password_btn_title">Reset Password</string>
    <string name="reset_password_email_fail_text">Enter a valid email</string>
    <string name="reset_password_password_fail_text">Enter a valid username</string>

    <!--Media option screen string-->
    <string-array name="photoOptionArray">
        <item>Take Photo</item>
        <item>Choose from library</item>
    </string-array>
    <string name="photoOptionTitle">Select </string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>


    <!--Progress Dialog messages strings-->
    <string name="progress_title_text">Please Wait</string>
    <string name="progress_message_text">Loading...</string>


    <!--Home page view pager tab string-->
    <string name="home_page_recent_text">Recent</string>
    <string name="home_page_nearby_text">Nearby</string>
    <string name="home_page_top_text">Top</string>
    <string name="title_activity_create_violation">CreateViolationActivity</string>


    <!--Create ViolationResponse screen string-->
    <string name="create_violation_screen_title">Create new violation</string>
    <string name="create_violation_violation_type_title">Violation Type*</string>
    <string name="create_violation_txt_violation_title">Violation Title*</string>
    <string name="create_violation_violation_location_title">Violation Location*</string>
    <string name="create_violation_danger_level_title">Danger Level</string>
    <string name="create_violation_frequency_level_title">Frequency Level</string>
    <string name="create_violation_txt_violation_tag">Violation Tags</string>
    <string name="create_violation_txt_violation_description">Violation Description</string>
    <string name="create_violation_txt_submit">Create Violation</string>
    <string name="create_violation_media_title">Violation Media*</string>
    <string name="create_violation_violation_status">Violation Status</string>


    <!--Edit Violation screen string-->
    <string name="edit_violation_screen_title">Edit violation</string>
    <string name="edit_violation_txt_submit">Submit Changes</string>


    <!--ViolationResponse Location string-->
    <string name="location_violation_title">Select Location</string>


    <!--Display violation screen string-->
    <string name="display_violation_screen_title">Violation Detail : </string>
    <string name="display_violation_violation_type_title">Type : </string>
    <string name="display_violation_violation_date">Date : </string>
    <string name="display_violation_violation_status">Status : </string>
    <string name="display_violation_violation_danger_level">Danger Level : </string>
    <string name="display_violation_violation_Frequency_level">Frequency Level : </string>
    <string name="display_violation_violation_media_title"> Media : </string>
    <string name="display_violation_violation_desc">Description : </string>
    <string name="display_violation_violation_tag">Tags : </string>


    <!--History string-->
    <string name="history_page_open_text">Open</string>
    <string name="history_page_fixed_text">Fixed</string>
    <string name="history_page_all_text">All</string>


    <string-array name="violation_status_array">
        <item>NEW</item>
        <item>IN_PROGRESS</item>
        <item>FIXED</item>
        <item>NOT_FIXED</item>
        <item>NOT_VIOLATION</item>
    </string-array>


    <string-array name="danger_level_array">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>


    <string-array name="drawler_menu_user">
        <item>Home</item>
        <item>Profile</item>
        <item>My History</item>
        <item>My Watch List</item>
        <item>Statistics</item>
    </string-array>

    <string-array name="drawler_menu_admin">
        <item>Home</item>
        <item>Profile</item>
        <item>My History</item>
        <item>My Watch List</item>
        <item>Statistics</item>
        <item>Manage Violation Groups</item>
        <item>Manage Violations</item>
        <item>Manage Violation Properties</item>
    </string-array>


    <!--Warning message-->
    <string name="login_failed_text">Login failed! Please be sure that password and username are correct!</string>
    <string name="reset_password_failed_text">Reset password request failed! Please be sure that email and username are correct!</string>
    <string name="reset_password_success_text">Reset password success! Please check your email!</string>
    <string name="signup_failed_text">Signup request failed! Please be sure that email and username are correct!</string>
    <string name="signup_success_text">Signup request success! Please login to system!</string>
    <string name="watchlist_success_text">There is no violation in your wathclist!</string>
    <string name="watchlist_fail_text">Watchlist request failed! Please try again later!</string>

    <string name="history_success_text">You have not created any violation up to now! </string>
    <string name="history_fail_text">History request failed! Please try again later!</string>
    <string name="change_password_fail_text">Change password request failed! Please be sure that new passwords are valid!</string>
    <string name="change_password_success_text">Your password changed successfully!</string>
    <string name="edit_profile_photo_fail_text">An error occured when uploading photo, Please try again!</string>
    <string name="edit_profile_fail_text">An error occured when editing profile, Please try again!</string>
    <string name="edit_profile_success_text">Your profile updated successfully!</string>
    <string name="edit_profile__info_fail_text">Please fill all fields!</string>


    <string name="title_activity_splash">Splash</string>
    <string name="manage_violations_title">Manage Violations</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="violation_gorup_list">Violation Groups</string>
    <string name="violation_group_name">Violation Group Name</string>
    
    <string name="title_activity_edit_violation">EditViolationActivity</string>
    <string name="violation_gorup_detail">Violation Group Detail</string>
    <string name="field_type">Type</string>
    <string name="expected_value">Exp. Value</string>
</resources>
