<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/nav_icon" />



    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/WhiteTextInputLayoutTheme">

        <EditText android:id="@+id/reset_password_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:hint="@string/edit_profile_txt_email" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reset_password_txt_email_fail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/reset_password_email_fail_text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12dip"
        android:visibility="invisible" />


    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/WhiteTextInputLayoutTheme">

        <EditText android:id="@+id/reset_password_txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:hint="@string/edit_profile_txt_username"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reset_password_txt_username_fail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/reset_password_password_fail_text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12dip"
        android:visibility="invisible" />

    <!-- Signup Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset_password_btn_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/reset_password_btn_title"/>

</LinearLayout>