<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/Toolbar">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!--Profile media-->
            <ImageView
                android:id="@+id/edit_profile_img_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp" />

            <!-- Full name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/BlueTextInputLayoutTheme">

                <EditText
                    android:id="@+id/edit_profile_txt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile_txt_fullname"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>


            <!-- username Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/BlueTextInputLayoutTheme">

                <EditText
                    android:id="@+id/edit_profile_txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile_txt_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>


            <!-- email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/BlueTextInputLayoutTheme">

                <EditText
                    android:id="@+id/edit_profile_txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile_txt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>


            <!-- bio Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/BlueTextInputLayoutTheme">

                <EditText
                    android:id="@+id/edit_profile_txt_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile_bio"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/edit_profile_btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:padding="12dp"
                android:text="@string/edit_profile_btn_title"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>

