<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/colorLightGray"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:padding="2dp"
            android:layout_weight=".60"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="10sp"
                android:textColor="@color/colorDarkGray"/>

        </LinearLayout>

        <LinearLayout
            android:padding="2dp"
            android:layout_weight=".10"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/field_type"
                android:textSize="10sp"
                android:textColor="@color/colorDarkGray"/>

        </LinearLayout>

        <LinearLayout
            android:padding="2dp"
            android:layout_weight=".10"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_expected_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/expected_value"
                android:textSize="10sp"
                android:textColor="@color/colorDarkGray"/>

        </LinearLayout>

        <LinearLayout
            android:padding="2dp"
            android:layout_weight=".20"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_height="match_parent">


            <ImageView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_edit"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:contentDescription="@string/detail"/>

            <ImageView
                android:background="@color/colorWhite"
                android:id="@+id/custom_field_delete"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:contentDescription="@string/delete"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>